package electronica_main.util;

public enum SistemaOperativo {
    ANDROID, IOS
}
