package electronica_main.util;

public enum TipoPantalla {
    LED, OLED, QLED, QNED
}
